--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://marcellocq.github.io/delivery-app-front/",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -13,6 +14,7 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@reduxjs/toolkit": "^2.0.1",
+    "gh-pages": "^6.1.0",
     "ldrs": "^1.0.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
